--- a/config/locales/tr.yml
+++ b/config/locales/tr.yml
@@ -1,18 +1,18 @@
-# BigBlueButton open source conferencing system - http://www.bigbluebutton.org/.
+# Qosylike open source conferencing system - http://www.bigbluebutton.org/.
 #
-# Copyright (c) 2018 BigBlueButton Inc. and by respective authors (see below).
+# Copyright (c) 2018 Qosylike Inc. and by respective authors (see below).
 #
 # This program is free software; you can redistribute it and/or modify it under the
 # terms of the GNU Lesser General Public License as published by the Free Software
 # Foundation; either version 3.0 of the License, or (at your option) any later
 # version.
 #
-# BigBlueButton is distributed in the hope that it will be useful, but WITHOUT ANY
+# Qosylike is distributed in the hope that it will be useful, but WITHOUT ANY
 # WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR A
 # PARTICULAR PURPOSE. See the GNU Lesser General Public License for more details.
 #
 # You should have received a copy of the GNU Lesser General Public License along
-# with BigBlueButton; if not, see <http://www.gnu.org/licenses/>.
+# with Qosylike; if not, see <http://www.gnu.org/licenses/>.
 
 # Locale.
 
@@ -131,13 +131,13 @@ tr:
     room_configuration:
       title: Sınıf Yapılandırması
       mute:
-        info: BigBlueButton görüşmesine katılan kullanıcıların sesini otomatik olarak kapatır
+        info: Qosylike görüşmesine katılan kullanıcıların sesini otomatik olarak kapatır
       require_moderator:
-        info: BigBlueButton görüşmesinin sorumlusuna bir kullanıcının katılmak istediğini bildirir. Kullanıcı kabul edilirse görüşmeye katılabilir.
+        info: Qosylike görüşmesinin sorumlusuna bir kullanıcının katılmak istediğini bildirir. Kullanıcı kabul edilirse görüşmeye katılabilir.
       allow_any:
         info: İsteyen her kullanıcının istediği zaman görüşmeye katılabilmesini sağlar. Varsayılan olarak yalnız oda sahibi görüşmeyi başlatabilir.
       all_moderator:
-        info: BigBlueButton görüşmesine katılan tüm kullanıcılara sorumlu yetkileri verir.
+        info: Qosylike görüşmesine katılan tüm kullanıcılara sorumlu yetkileri verir.
       options:
         disabled: Etkin Değil
         enabled: Her Zaman Etkin
